--- a/index.html
+++ b/index.html
@@ -20,8 +20,6 @@
     .warn {background-color: #e9dbf5;} /* #efe4f7; #E6E6FA;}*/
     #gold,
     input[type="text"] {text-align: right;  border-radius: 6px; width: 90px; border-width: thin; padding-right: 4px;}
-    #prem {width: 75px;}
-    #price {width: 100px;}
     input[type=button] {text-align: center; border-radius: 6px; margin: 3px; border-width: thin;}
     #s {font-size:18px;}
     .nick,
@@ -59,6 +57,8 @@
     #qua, #dim {color: black;}
     #face_total, #troy_ounce, #grand_total {padding: 0 5px;}
     #price, #prem {margin-top: 5px;}
+    #prem {width: 75px;}
+    #price {width: 105px;}
     #price.warning, #prem.warning {color:red;}
     #prem-hd {float:left; margin-left:150px; font-size:24px; font-weight: bold;}
     #premium {background-color: white; border-radius:50%; border:1px solid black;
@@ -208,10 +208,8 @@ if(!api.token.match(/goldapi/)){
 
 // document.addEventListener("DOMContentLoaded", function() {
   [rnd, ken].forEach(e => {
-    console.log(e.value);
     if(!(localStorage.getItem(e.value) === null)){
       e.className = 'toggled';
-    console.log(e.className);
     }
   });
   render();
@@ -331,8 +329,8 @@ silver.onchange = function(event){
   event.target.blur();
 };
 
-function render(sign){ console.trace();
-  let nickel = sign !== undefined ? sign * db.dime.price * .5 : 0;
+function render(sign){ // console.trace();
+  let nickel = sign === undefined ? 0 : sign * spot * troy * db.nick.fract;
 
   if((sign > 0 && (nickel_count() == 0 || nickel_count() == 2)) ||
      (sign < 0 && (nickel_count() == 4 || nickel_count() == 2))){ nickel *= 2 }
@@ -371,10 +369,12 @@ function render(sign){ console.trace();
 
   document.querySelectorAll('.coin').forEach(e => fn(e));
 
-  grand.innerHTML  = Object.values(db).reduce((grand, {total}) => grand + parseFloat(total), 0).toFixed(2);
+  grand.innerHTML = Object.values(db).reduce((grand, {total}) => grand + parseFloat(total), 0).toFixed(2);
+  amt = nickel_count() * spot * troy * db.nick.fract + .005;
   let n = amt / (spot * troy);
   face.innerHTML = (n - db.dolr.count * (db.dolr.fract - 1)).toFixed(2); // adjust for rounds
   ozt.innerHTML = (n * troy).toFixed(2);
+  console.log(`amt: ${amt}, nickel_count(): ${nickel_count()}`, db);
 };
 
 let e = document.querySelectorAll("button");
@@ -382,7 +382,7 @@ for(let i = 0; i < e.length; i++){
   e[i].addEventListener("click", function(event){ 
     if(fn(event.target)){
       grand.innerHTML  = Object.values(db).reduce((grand, {total}) => grand + parseFloat(total), 0).toFixed(2);
-      amt = (nickel_count() * spot * troy * .05 + .005);
+      amt = nickel_count() * spot * troy * db.nick.fract + .005;
       buy.value = amt.toFixed(2);
       let n = amt / (spot * troy);
       face.innerHTML = (n - db.dolr.count * (db.dolr.fract -1)).toFixed(2);     
@@ -392,7 +392,7 @@ for(let i = 0; i < e.length; i++){
 };
 
 function fn(e){
-  console.log(e);
+  // console.log(e);
   let td, inc;
   if(e.tagName == "BUTTON"){ // called from + or - button
     td  = e.parentNode.parentNode.querySelectorAll('td'),
@@ -412,7 +412,7 @@ function fn(e){
   td[1].innerHTML  = db[key].count;
   td[4].innerHTML  = db[key].price.toFixed(3);
   td[6].innerHTML  = db[key].total.toFixed(2);
-  console.log(`key= ${key}:`,db[key]);
+  // console.log(`key= ${key}:`,db[key]);
   return true;
 }
 
@@ -421,7 +421,7 @@ let els = document.getElementsByClassName("nick");
   nick.addEventListener('click', function (event) {
     let sign = event.target.classList.contains('toggled') ? -1 : 1;
     render(sign);
-    amt = (nickel_count() * spot * troy * .05 + .005);
+    amt = nickel_count() * spot * troy * db.nick.fract + .005;
     buy.value = amt.toFixed(2);
     event.target.blur();
   });
