--- a/index.html
+++ b/index.html
@@ -135,11 +135,6 @@
             height: 40px;
         }
 
-        @media (max-width: 500px) {
-            body { font-size: 20px; }
-            .input-field { width: 95px; }
-        }
-
         .right-align {
             text-align: right;
         }
@@ -190,6 +185,11 @@
 
         #premInput {
             width: 80px;
+        }
+
+        @media (max-width: 500px) {
+            body, button { font-size: 20px; }
+            .input-field { width: 95px; }
         }
 </style>
     </style>
