--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
             position: fixed;
             top: 0;
             left: 0;
+            max-width: 480px;
             width: 100%;
             height: 100%;
             background: #474e5d;
@@ -131,7 +132,7 @@
             margin: 10%;
         }
 
-        .qr-code img {
+        #qr-code img {
             height: 40px;
         }
 
@@ -198,7 +199,7 @@
 <body>
     <div class="calculator-container">
         <div class="header">
-            <div class="qr-code">
+            <div id="qr-code">
                 <img src="qr_icon2.png" alt="QR Code">
             </div>
             <h2>Silver Barter Calculator</h2>
@@ -310,12 +311,12 @@
             </table>
             <hr>
         </div>
+        <div class="modal-overlay" id="imageOverlay">
+            <img src="Silver Barter QR2.png" alt="QR Code">
+        </div>
     </div>
 
     <div id="viewportWidth"></div>
-    <div class="modal-overlay" id="qrModal">
-        <img src="Silver Barter QR2.png" alt="QR Code">
-    </div>
 
     <script>
         (function() { // IIFE
@@ -696,6 +697,20 @@
             window.calculator = calculator;
             window.coinInventory = coinInventory;
         })();
+
+        const qrcode = document.getElementById("qr-code");
+        const overlay = document.getElementById("imageOverlay");
+
+        overlay.addEventListener("click", function() {
+            console.log("Close the overlay when clicking anywhere");
+            overlay.style.display = "none";
+        });
+
+        qrcode.addEventListener("click", function(event) {
+            event.preventDefault();
+            console.log(event, "Show the overlay when clicking the link");
+            overlay.style.display = "block";
+        });
     </script>
 </body>
 </html>
