--- a/index.html
+++ b/index.html
@@ -203,6 +203,11 @@
             color: black;
             display: inline-block;
         }
+        .shadow:hover {
+            background-color: #f0f0ff;
+            border-radius: 4px;
+            padding: 4px 0;
+        }
     /*
         @media (max-width: 500px) {
             body, button { font-size: 20px; }
@@ -228,10 +233,10 @@
             <a href="https://online.kitco.com/" class="spot-price" 
                 target="_blank">Kitco <div class=ask>Ask</div></a>
             <div>
-                <a href="https://findbullionprices.com/p/90-junk-silver-coins-100-face-value-bag/" 
-                   target="_blank">Junk <div class=fbp>Find Bullion Prices </div></a>
-                <a href="https://findbullionprices.com/collection/Monster-Boxes/" 
-                   target="_blank">Mbox</a>
+                <a class=shadow href="https://findbullionprices.com/p/90-junk-silver-coins-100-face-value-bag/" 
+                   target="_blank">Junk <div class=fbp>Find</div></a> Bullion
+                <a class=shadow href="https://findbullionprices.com/collection/Monster-Boxes/" 
+                   target="_blank"><div class=fbp>Prices</div> Mbox</a>
             </div>
             <a href="https://sdbullion.com/" class="set-default-spot" 
                 target="_blank">SD Bullion</a>
